--- a/focus/manifest.json
+++ b/focus/manifest.json
@@ -5,5 +5,8 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "permissions": ["storage"]
+  "background": {
+    "service_worker": "alert.js"
+  },
+  "permissions": ["storage", "alarms", "notifications"]
 }
